#
#
AC_INIT([CastReceiver],[0.0.3],[PROJ],[CastReceiver])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CFLAGS=-Wall
AC_SUBST(CFLAGS)

UPNP_MODULES="libupnp >= 1.8.3"
PKG_CHECK_MODULES(UPNP, $UPNP_MODULES)
AC_SUBST(UPNP_CFLAGS)
AC_SUBST(UPNP_LIBS)

GLIB_MODULES="glib-2.0 >= 2.56.0"
PKG_CHECK_MODULES(GLIB, $GLIB_MODULES)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

GTHREAD_MODULES="gthread-2.0 >= 2.56.0"
PKG_CHECK_MODULES(GTHREAD, $GTHREAD_MODULES)
AC_SUBST(GTHREAD_CFLAGS)
AC_SUBST(GTHREAD_LIBS)

AC_OUTPUT(Makefile CastReceiver/app/Makefile)

