AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs
include ../sources

castreceiver_SOURCES = $(COMMONSRC)

castreceiver_CFLAGS = -O3

scriptfilesdir = $(pkgdatadir)/scripts
scriptfiles_SCRIPTS = ../resources/scripts/*

man1_MANS = ../resources/man/castreceiver.1

bin_PROGRAMS = castreceiver

